--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ position:absolute;right:6%;bottom:6%;width:160px;opacity:0.08;z-index:3;pointer-
 <div class="video-wrap" id="videoWrap" aria-hidden="true">
 <!-- Vimeo background: replace YOUR_VIMEO_ID -->
 <iframe id="vimeoBg"
-src="https://player.vimeo.com/video/1133308234?fl=ip&fe=ec?autoplay=1&muted=1&loop=1&background=1&quality=720p"
+src="https://player.vimeo.com/video/1133308234?fl=pl&fe=sh?autoplay=1&muted=1&loop=1&background=1&quality=720p"
 frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
 title="Tom Manson Visuals — Reel"></iframe>
 </div>
@@ -135,7 +135,7 @@ title="Tom Manson Visuals — Reel"></iframe>
 <h1 class="title">Cinematic FPV & Action Sports Filmmaking</h1>
 <p class="subtitle">Tom Manson — showreel</p>
 <div class="cta-row">
-<a class="cta-primary" href="https://vimeo.com/YOUR_VIMEO_ID" target="_blank" rel="noopener">Watch the full reel</a>
+<a class="cta-primary" href="https://vimeo.com/1133308234?fl=pl&fe=sh" target="_blank" rel="noopener">Watch the full reel</a>
 <a class="cta-ghost" href="#work">My Work</a>
 </div>
 </div>
