--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ title="Tom Manson Visuals — Reel"></iframe>
 <p class="muted">Short edits, event coverage, and cinematic lines — all shot FPV and stabilised rigs.</p>
 <!-- grid / thumbnails -->
 <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:18px">
-<a href="https://vimeo.com/YOUR_VIMEO_ID" class="thumb" style="text-decoration:none;color:inherit">
+<a href="https://vimeo.com/1133308234?" class="thumb" style="text-decoration:none;color:inherit">
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 1</div>
 <div style="padding-top:8px;font-weight:600">Pump track — Christchurch</div>
 </a>
