--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ footer { padding: 36px 20px; background: linear-gradient(180deg, rgba(0,0,0,0.02
 <nav class="nav-ctas">
 <a class="btn" href="#work">Work</a>
 <a class="btn" href="#contact">Contact</a>
-<a class="btn" href="https://vimeo.com/1133308234" target="_blank" rel="noopener">Reel</a>
+<a class="btn" href="https://vimeo.com/1133308234?" target="_blank" rel="noopener">Reel</a>
 </nav>
 </header>
 
