--- a/index.html
+++ b/index.html
@@ -5,163 +5,132 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Tom Manson Visuals — Reel</title>
 <meta name="description" content="FPV & Action Sports Filmmaker — showreel" />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-:root {
---bg: #ffffff;
---fg: #111;
---muted: #e6e6e6;
---accent: #000;
---max-width: 1100px;
---hero-height: 100vh;
---nav-height: 72px;
+:root{
+--bg:#ffffff;
+--fg:#111;
+--muted:#e6e6e6;
+--accent:#000;
+--max-width:1100px;
+--hero-height:100vh;
+--nav-height:72px;
 }
-* { box-sizing: border-box; }
-html, body {
-height: 100%;
-margin: 0;
-font-family: "SF Pro Display", Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
-font-size: 16px;
-color: var(--fg);
-background: var(--bg);
--webkit-font-smoothing: antialiased;
+*{box-sizing:border-box}
+html,body{
+height:100%;
+margin:0;
+font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+font-size:16px;
+color:var(--fg);
+background:var(--bg);
+scroll-behavior:smooth;
+-webkit-font-smoothing:antialiased;
 }
+
 /* header */
-.site-header {
-position: fixed;
-left: 0; right: 0; top: 0;
-height: var(--nav-height);
-display: flex;
-align-items: center;
-justify-content: space-between;
-padding: 0 22px;
-z-index: 60;
-backdrop-filter: blur(6px);
--webkit-backdrop-filter: blur(6px);
-background: rgba(255,255,255,0.65);
-box-shadow: 0 4px 10px rgba(0,0,0,0.04);
-transition: background-color .28s, box-shadow .28s;
+.site-header{
+position:fixed;left:0;right:0;top:0;height:var(--nav-height);
+display:flex;align-items:center;justify-content:space-between;
+padding:0 22px;z-index:60;
+backdrop-filter: blur(8px); -webkit-backdrop-filter: blur(8px);
+transition: background-color .3s, box-shadow .3s, transform .3s;
 }
-.site-header.scrolled {
-background: rgba(255,255,255,0.85);
-box-shadow: 0 6px 18px rgba(15,15,15,0.08);
+.site-header.scrolled{
+background: rgba(255,255,255,0.7);
+box-shadow: 0 6px 18px rgba(15,15,15,0.06);
 }
-.brand { display: flex; align-items: center; gap: 12px; }
-.brand .logo { width: 44px; height: 44px; display: block; }
-.brand .name { font-weight: 700; letter-spacing: .6px; }
-.nav-ctas { display: flex; gap: 12px; align-items: center; }
-.btn {
-padding: 10px 14px;
-border-radius: 10px;
-border: 1px solid rgba(0,0,0,0.08);
-background: transparent;
-font-weight: 600;
-text-decoration: none;
-color: var(--fg);
+.brand{display:flex;align-items:center;gap:12px}
+.brand .logo{width:44px;height:44px;display:block}
+.brand .name{font-weight:700;letter-spacing:.6px}
+.nav-ctas{display:flex;gap:12px;align-items:center}
+.btn{
+padding:10px 14px;border-radius:10px;
+border:1px solid rgba(0,0,0,0.08);
+background:transparent;
+font-weight:600;text-decoration:none;color:var(--fg);
+transition: background .2s, color .2s;
 }
+.btn:hover{background:#000;color:#fff;}
+
 /* hero */
-.hero {
-position: relative;
-height: var(--hero-height);
-overflow: hidden;
-display: flex;
-align-items: center;
-justify-content: center;
+.hero{
+position:relative;height:var(--hero-height);overflow:hidden;
+display:flex;align-items:center;justify-content:center;
 }
-.video-wrap {
-position: absolute;
-inset: 0;
-overflow: hidden;
-z-index: 0;
-pointer-events: none;
-will-change: transform;
-border-radius: 22px;
-margin: 0 4vw;
-box-shadow: 0 10px 60px rgba(0,0,0,0.2);
+.video-wrap{
+position:absolute;inset:0;overflow:hidden;z-index:0;
+pointer-events:none;
+will-change:transform;
 }
-.video-wrap iframe {
-position: absolute;
-left: 50%; top: 50%;
-transform: translate(-50%, -50%);
-width: 177.77vh;
-height: 100vh;
-min-width: 1200px;
-border: 0;
-border-radius: 22px;
-pointer-events: auto;
+.video-wrap iframe{
+position:absolute;left:50%;top:50%;
+transform:translate(-50%,-50%);
+width:177.77vh;height:100vh;min-width:1200px;
+border:0;pointer-events:auto;
 }
-/* gradient overlay */
-.hero::after {
-content: "";
-position: absolute; inset: 0;
-background: linear-gradient(180deg, rgba(0,0,0,0.15) 0%, rgba(255,255,255,0.05) 40%, rgba(255,255,255,0.3) 100%);
-z-index: 2;
-mix-blend-mode: multiply;
-pointer-events: none;
+.hero::after{
+content:"";position:absolute;inset:0;
+background:linear-gradient(180deg, rgba(0,0,0,0.15) 0%, rgba(255,255,255,0.1) 40%, rgba(255,255,255,0.2) 100%);
+z-index:2;mix-blend-mode:multiply;pointer-events:none;
 }
-/* hero content */
-.hero-content {
-position: relative;
-z-index: 4;
-text-align: center;
-color: var(--bg);
-width: 100%;
-max-width: var(--max-width);
-padding: 0 20px;
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 18px;
+.hero-content{
+position:relative;z-index:4;text-align:center;color:var(--bg);
+max-width:var(--max-width);padding:0 20px;
+display:flex;flex-direction:column;align-items:center;gap:18px;
+animation:fadeIn 1.6s ease-out forwards;
 }
-.hero .title {
-font-size: clamp(20px,4vw,36px);
-font-weight: 700;
-color: var(--bg);
-letter-spacing: .5px;
-text-shadow: 0 8px 30px rgba(0,0,0,0.45);
+@keyframes fadeIn{
+from{opacity:0;transform:translateY(40px);}
+to{opacity:1;transform:translateY(0);}
 }
-.hero .subtitle { color: rgba(255,255,255,0.9); font-weight: 500; }
-.cta-row { display: flex; gap: 12px; }
-.cta-primary {
-background: var(--bg);
-color: var(--fg);
-padding: 12px 18px;
-border-radius: 12px;
-font-weight: 700;
-text-decoration: none;
-box-shadow: 0 8px 30px rgba(0,0,0,0.12);
+.hero .title{
+font-size:clamp(20px,4vw,32px);font-weight:700;color:var(--bg);
+text-shadow:0 8px 30px rgba(0,0,0,0.4);
 }
-.cta-ghost {
-background: transparent;
-border: 1px solid rgba(255,255,255,0.85);
-color: var(--bg);
-padding: 10px 16px;
-border-radius: 10px;
-text-decoration: none;
+.hero .subtitle{color:rgba(255,255,255,0.9);font-weight:500}
+.cta-row{display:flex;gap:12px}
+.cta-primary{
+background:var(--bg);color:var(--fg);
+padding:12px 18px;border-radius:12px;font-weight:700;
+text-decoration:none;box-shadow:0 8px 30px rgba(0,0,0,0.12);
+transition:transform .2s, box-shadow .2s;
 }
-/* content */
-main { position: relative; z-index: 1; }
-.section {
-max-width: var(--max-width);
-margin: 0 auto;
-padding: 80px 20px;
+.cta-primary:hover{transform:translateY(-2px);box-shadow:0 8px 40px rgba(0,0,0,0.2);}
+.cta-ghost{
+background:transparent;border:1px solid rgba(255,255,255,0.85);
+color:var(--bg);padding:10px 16px;border-radius:10px;text-decoration:none;
+transition:background .2s;
 }
-.about { display: flex; gap: 28px; align-items: center; flex-wrap: wrap; }
-.about .col { flex: 1 1 320px; }
-.muted { color: #666; }
+.cta-ghost:hover{background:rgba(255,255,255,0.15)}
+
+/* sections */
+main{position:relative;z-index:1}
+.section{
+max-width:var(--max-width);
+margin:0 auto;
+padding:80px 20px;
+opacity:0;
+transform:translateY(40px);
+transition:opacity .8s ease-out, transform .8s ease-out;
+}
+.section.visible{opacity:1;transform:translateY(0);}
+.muted{color:#666}
+
 /* footer */
-footer { padding: 36px 20px; background: linear-gradient(180deg, rgba(0,0,0,0.02), transparent); }
-.brand-small { display: flex; gap: 10px; align-items: center; color: #222; }
-/* responsive */
-@media (max-width:920px) {
-.video-wrap iframe { min-width: 900px; width: 200vh; }
-.brand .name { display: none; }
-.hero .title { font-size: 20px; }
+footer{padding:36px 20px;background:linear-gradient(180deg,rgba(0,0,0,0.02),transparent)}
+.brand-small{display:flex;gap:10px;align-items:center;color:#222}
+.propeller{
+position:absolute;right:6%;bottom:6%;width:160px;opacity:0.08;z-index:3;pointer-events:none;
 }
-@media (max-width:520px) {
-.video-wrap iframe { min-width: 600px; width: 250vh; }
-.site-header { padding: 0 12px; }
-.nav-ctas { display: none; }
+
+@media (max-width:920px){
+.video-wrap iframe{min-width:900px;width:200vh}
+.brand .name{display:none}
+}
+@media (max-width:520px){
+.video-wrap iframe{min-width:600px;width:250vh}
+.site-header{padding:0 12px}
+.nav-ctas{display:none}
 }
 </style>
 </head>
@@ -175,39 +144,50 @@ footer { padding: 36px 20px; background: linear-gradient(180deg, rgba(0,0,0,0.02
 <nav class="nav-ctas">
 <a class="btn" href="#work">Work</a>
 <a class="btn" href="#contact">Contact</a>
-<a class="btn" href="https://vimeo.com/1133308234?" target="_blank" rel="noopener">Reel</a>
+<a class="btn" href="https://vimeo.com/1133308234" target="_blank">Open Reel</a>
 </nav>
 </header>
 
 <section class="hero" id="hero">
 <div class="video-wrap" id="videoWrap">
-<iframe src="https://player.vimeo.com/video/1133308234?autoplay=1&muted=1&loop=1&background=1"
+<iframe src="https://player.vimeo.com/video/1133308234?autoplay=1&muted=1&loop=1&background=1&quality=720p"
 allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
+
 <div class="hero-content">
 <h1 class="title">Cinematic FPV & Action Sports Filmmaking</h1>
-<p class="subtitle">By Tom Manson — Christchurch, NZ</p>
+<p class="subtitle">Tom Manson — showreel</p>
 <div class="cta-row">
-<a class="cta-primary" href="https://vimeo.com/1133308234" target="_blank">Watch Full Reel</a>
+<a class="cta-primary" href="https://vimeo.com/1133308234" target="_blank">Watch the full reel</a>
 <a class="cta-ghost" href="#work">My Work</a>
 </div>
 </div>
+
+<svg class="propeller" viewBox="0 0 200 200">
+<g fill="none" stroke="#000" stroke-width="4" transform="translate(10,10) scale(0.9)">
+<path d="M100 20 C160 20 170 60 140 95 C110 130 85 160 60 140 C35 120 40 70 80 50 Z" fill="#000"/>
+<circle cx="100" cy="100" r="18" fill="#000"/>
+</g>
+</svg>
 </section>
 
 <main>
 <section id="work" class="section">
-<h2>Selected Projects</h2>
-<p class="muted">A mix of MTB, BMX, and FPV event cinematography — filmed across New Zealand.</p>
+<h2>Selected Clips</h2>
+<p class="muted">Short edits, event coverage, and cinematic FPV lines.</p>
 <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:18px">
-<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Hedgefest 2025</div>
-<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Crankworx Pre-Session</div>
-<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Pump Track Lines</div>
+<a href="https://vimeo.com/1133308234" class="thumb" style="text-decoration:none;color:inherit">
+<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 1</div>
+<div style="padding-top:8px;font-weight:600">Pump track — Christchurch</div>
+</a>
+<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 2</div>
+<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 3</div>
 </div>
 </section>
 
-<section id="contact" class="section" style="padding-bottom:80px">
+<section id="contact" class="section">
 <h2>Contact</h2>
-<p class="muted">For bookings, collaborations, or media inquiries:</p>
+<p class="muted">For bookings & collaborations:</p>
 <div style="display:flex;gap:20px;flex-wrap:wrap;margin-top:12px">
 <div><strong>Email</strong><div>hello@tomansonvisuals.com</div></div>
 <div><strong>Instagram</strong><div>@tom.manson_</div></div>
@@ -228,23 +208,18 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 
 <script>
 document.getElementById('year').textContent = new Date().getFullYear();
-const hero = document.getElementById('hero');
-const videoWrap = document.getElementById('videoWrap');
-const siteHeader = document.getElementById('siteHeader');
 
-function onScroll(){
+const header = document.getElementById('siteHeader');
+const sections = document.querySelectorAll('.section');
+
+window.addEventListener('scroll', () => {
 const sc = window.scrollY;
-if(sc > 30) siteHeader.classList.add('scrolled'); else siteHeader.classList.remove('scrolled');
-const heroH = hero.offsetHeight || window.innerHeight;
-const progress = Math.min(1, sc / heroH);
-const translateY = Math.round(progress * 100);
-const scale = 1 - (progress * 0.25);
-videoWrap.style.transform = `translateY(-${translateY}px) scale(${scale})`;
-hero.style.opacity = 1 - Math.min(0.16, progress * 0.14);
-}
-window.addEventListener('scroll', onScroll, {passive:true});
-window.addEventListener('resize', onScroll);
-onScroll();
+header.classList.toggle('scrolled', sc > 30);
+sections.forEach(sec => {
+const rect = sec.getBoundingClientRect();
+if(rect.top < window.innerHeight * 0.85) sec.classList.add('visible');
+});
+});
 </script>
 
 </body>
