--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
 </div>
 
-<svg class="propeller" viewBox="0 0 200 200">
+
 <g fill="none" stroke="#000" stroke-width="4" transform="translate(10,10) scale(0.9)">
 <path d="M100 20 C160 20 170 60 140 95 C110 130 85 160 60 140 C35 120 40 70 80 50 Z" fill="#000"/>
 <circle cx="100" cy="100" r="18" fill="#000"/>
@@ -189,7 +189,7 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 <h2>Contact</h2>
 <p class="muted">For bookings & collaborations:</p>
 <div style="display:flex;gap:20px;flex-wrap:wrap;margin-top:12px">
-<div><strong>Email</strong><div>hello@tomansonvisuals.com</div></div>
+<div><strong>Email</strong><div>tommansonvisuals@gmail.com</div></div>
 <div><strong>Instagram</strong><div>@tom.manson_</div></div>
 <div><strong>Phone</strong><div>022 651 5510</div></div>
 </div>
