--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
+        <!-- Your website content -->
+    </body>
+    </html>
 <html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Tom Manson Visuals — Reel</title>
+<link rel="icon" href="/tmv.png" type="image/x-icon">
 <meta name="description" content="FPV & Action Sports Filmmaker — showreel" />
 <style>
 :root{
