--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Tom Manson Visuals — Reel</title>
+<title>Tom Manson Visuals</title>
 <link rel="icon" href="/tmv.png" type="image/x-icon">
 <meta name="description" content="FPV & Action Sports Filmmaker — showreel" />
 <style>
