--- a/index.html
+++ b/index.html
@@ -178,11 +178,13 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 <main>
 <section id="work" class="section">
 <h2>Selected Clips</h2>
-<p class="muted">Short edits, event coverage, and cinematic FPV lines.</p>
+<p class="muted">Edits, event coverage, and cinematic FPV Drone Filming.</p>
 <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:18px">
 <a href="https://vimeo.com/1133308234" class="thumb" style="text-decoration:none;color:inherit">
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 1</div>
-<div style="padding-top:8px;font-weight:600">Pump track — Christchurch</div>
+<div style="padding-top:8px;font-weight:600">E-MX Race Reel</div>
+<div style="padding-top:8px;font-weight:600">Place holder</div>
+<div style="padding-top:8px;font-weight:600">place holder</div>
 </a>
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 2</div>
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 3</div>
