--- a/index.html
+++ b/index.html
@@ -183,11 +183,20 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 <a href="https://vimeo.com/1133308234" class="thumb" style="text-decoration:none;color:inherit">
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 1</div>
 <div style="padding-top:8px;font-weight:600">E-MX Race Reel</div>
-<div style="padding-top:8px;font-weight:600">Place holder</div>
-<div style="padding-top:8px;font-weight:600">place holder</div>
+<div style="padding-top:4px;font-size:0.9em;color:#666">FPV Cinematic Highlights</div>
 </a>
+
+<a href="#" class="thumb" style="text-decoration:none;color:inherit">
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 2</div>
+<div style="padding-top:8px;font-weight:600">Project Title</div>
+<div style="padding-top:4px;font-size:0.9em;color:#666">Project Subtitle</div>
+</a>
+
+<a href="#" class="thumb" style="text-decoration:none;color:inherit">
 <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 3</div>
+<div style="padding-top:8px;font-weight:600">Project Title</div>
+<div style="padding-top:4px;font-size:0.9em;color:#666">Project Subtitle</div>
+</a>
 </div>
 </section>
 
