--- a/index.html
+++ b/index.html
@@ -179,26 +179,35 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 <section id="work" class="section">
 <h2>Selected Clips</h2>
 <p class="muted">Edits, event coverage, and cinematic FPV Drone Filming.</p>
-<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:18px">
-<a href="https://vimeo.com/1133308234" class="thumb" style="text-decoration:none;color:inherit">
-<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 1</div>
-<div style="padding-top:8px;font-weight:600">E-MX Race Reel</div>
-<div style="padding-top:4px;font-size:0.9em;color:#666">FPV Cinematic Highlights</div>
-</a>
+            <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:18px">
+                <!-- Thumbnail 1 - Working Example -->
+                <a href="https://vimeo.com/1133308234" class="thumb" style="text-decoration:none;color:inherit" target="_blank">
+                    <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">
+                        <div style="color:#666">[Actual Thumbnail 1]</div>
+                    </div>
+                    <div style="padding-top:8px;font-weight:600">E-MX Race Reel</div>
+                    <div style="padding-top:4px;font-size:0.9em;color:#666">FPV Cinematic Highlights</div>
+                </a>
 
-<a href="#" class="thumb" style="text-decoration:none;color:inherit">
-<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 2</div>
-<div style="padding-top:8px;font-weight:600">Project Title</div>
-<div style="padding-top:4px;font-size:0.9em;color:#666">Project Subtitle</div>
-</a>
+                <!-- Thumbnail 2 - REPLACE WITH YOUR VIDEO -->
+                <a href="https://vimeo.com/PASTE_YOUR_SECOND_VIDEO_ID" class="thumb" style="text-decoration:none;color:inherit" target="_blank">
+                    <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">
+                        <div style="color:#666">[Thumbnail 2 Placeholder]</div>
+                    </div>
+                    <div style="padding-top:8px;font-weight:600">Project Title 2</div>
+                    <div style="padding-top:4px;font-size:0.9em;color:#666">Project Description 2</div>
+                </a>
 
-<a href="#" class="thumb" style="text-decoration:none;color:inherit">
-<div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">Thumbnail 3</div>
-<div style="padding-top:8px;font-weight:600">Project Title</div>
-<div style="padding-top:4px;font-size:0.9em;color:#666">Project Subtitle</div>
-</a>
-</div>
-</section>
+                <!-- Thumbnail 3 - REPLACE WITH YOUR VIDEO -->
+                <a href="https://vimeo.com/PASTE_YOUR_THIRD_VIDEO_ID" class="thumb" style="text-decoration:none;color:inherit" target="_blank">
+                    <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">
+                        <div style="color:#666">[Thumbnail 3 Placeholder]</div>
+                    </div>
+                    <div style="padding-top:8px;font-weight:600">Project Title 3</div>
+                    <div style="padding-top:4px;font-size:0.9em;color:#666">Project Description 3</div>
+                </a>
+            </div>
+        </section>
 
 <section id="contact" class="section">
 <h2>Contact</h2>
