--- a/index.html
+++ b/index.html
@@ -123,9 +123,7 @@ transition:opacity .8s ease-out, transform .8s ease-out;
 /* footer */
 footer{padding:36px 20px;background:linear-gradient(180deg,rgba(0,0,0,0.02),transparent)}
 .brand-small{display:flex;gap:10px;align-items:center;color:#222}
-.propeller{
-position:absolute;right:6%;bottom:6%;width:160px;opacity:0.08;z-index:3;pointer-events:none;
-}
+
 
 @media (max-width:920px){
 .video-wrap iframe{min-width:900px;width:200vh}
@@ -190,7 +188,7 @@ allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </a>
 
                 <!-- Thumbnail 2 - REPLACE WITH YOUR VIDEO -->
-                <a href="https://vimeo.com/PASTE_YOUR_SECOND_VIDEO_ID" class="thumb" style="text-decoration:none;color:inherit" target="_blank">
+                <a href="https://vimeo.com/1133308234" class="thumb" style="text-decoration:none;color:inherit" target="_blank">
                     <div style="background:var(--muted);height:140px;border-radius:10px;display:flex;align-items:center;justify-content:center">
                         <div style="color:#666">[Thumbnail 2 Placeholder]</div>
                     </div>
